# splice-kicad-plugin

./: .gitignore  CHANGELOG.md  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
metadata/: metadata.json
packaging/: build_pcm.py  build_pcm_repo.py
scripts/: kicad_debug.py
splice_kicad_plugin/: __init__.py  config.py  errors.py  version.py
splice_kicad_plugin/client/: __init__.py  desktop_handoff.py  splice_api.py
splice_kicad_plugin/detect/: __init__.py  connectors.py  footprint_name.py  patterns.py
splice_kicad_plugin/parser/: __init__.py  netlist.py  pcb.py  sexpr.py
splice_kicad_plugin/shared/: kicad-detect.json
splice_kicad_plugin/ui/: action_plugin.py  settings_dialog.py
tests/: test_action_plugin.py  test_config.py  test_connectors.py  test_desktop_handoff.py  test_footprint_name.py  test_ids.py  test_netlist.py  test_pcb.py  test_plan.py  test_settings_dialog.py  test_sexpr.py  test_splice_api.py
