[project]
name = "splice-kicad-plugin"
version = "0.0.1"
description = "Export wired cable-harness plans from KiCad to Splice CAD"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [
  { name = "Splice CAD", email = "info@splice-cad.com" },
]
keywords = ["kicad", "harness", "cable", "wiring", "cad"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

[project.urls]
Homepage = "https://splice-cad.com"
Repository = "https://github.com/splice-cad/splice-kicad-plugin"
Documentation = "https://splice-cad.com/docs/kicad-plugin"
Issues = "https://github.com/splice-cad/splice-kicad-plugin/issues"

[project.scripts]
splice-kicad = "splice_kicad_plugin.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["splice_kicad_plugin*"]

[tool.setuptools.package-data]
splice_kicad_plugin = ["shared/kicad-detect.json", "icon.png"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "RUF"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
reportMissingImports = "error"
reportMissingTypeStubs = "warning"
exclude = ["**/__pycache__", "**/.venv", "**/_vendor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
  "parity: cross-language parity tests (TS <-> Python)",
  "host: KiCad-host integration tests (require Docker)",
  "e2e: end-to-end tests (require tauri-driver)",
]
